dsl/tree-sitter-logicpilot/test/corpus/atomic.txt
==================
Atomic blocks: state, time advance, transitions, couplings
==================

model PulseChain {
  atomic Pulser {
    time_advance = constant(1.0)
    on_timeout { emit pulse }
  }
  atomic Sink {
    state seen = false
    on_input pulse { seen = true }
  }
  couple Pulser.pulse -> Sink.pulse
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (call
                name: (identifier)
                args: (argument_list
                  (value
                    (value_literal
                      (float)))))))
          (behavior
            trigger: (trigger)
            effects: (effect_list
              (effect
                (emit_effect
                  port: (identifier)))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (variable_declaration
            name: (identifier)
            value: (value
              (value_literal
                (boolean_literal))))
          (behavior
            trigger: (trigger)
            port: (identifier)
            effects: (effect_list
              (effect
                (assignment_effect
                  name: (identifier)
                  value: (value
                    (value_literal
                      (boolean_literal)))))))))
      (couple_declaration
        from_model: (identifier)
        from_port: (identifier)
        to_model: (identifier)
        to_port: (identifier)))))

==================
Atomic: effects list and exponential time advance
==================

model Machine {
  atomic Cell {
    state busy = false
    state load = 0
    time_advance = exponential(2.0)
    on_input job_in { busy = true, load = 1 }
    on_timeout { busy = false emit done }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (variable_declaration
            name: (identifier)
            value: (value
              (value_literal
                (boolean_literal))))
          (variable_declaration
            name: (identifier)
            value: (value
              (value_literal
                (integer))))
          (field
            name: (identifier)
            value: (value
              (call
                name: (identifier)
                args: (argument_list
                  (value
                    (value_literal
                      (float)))))))
          (behavior
            trigger: (trigger)
            port: (identifier)
            effects: (effect_list
              (effect
                (assignment_effect
                  name: (identifier)
                  value: (value
                    (value_literal
                      (boolean_literal)))))
              (effect
                (assignment_effect
                  name: (identifier)
                  value: (value
                    (value_literal
                      (integer)))))))
          (behavior
            trigger: (trigger)
            effects: (effect_list
              (effect
                (assignment_effect
                  name: (identifier)
                  value: (value
                    (value_literal
                      (boolean_literal)))))
              (effect
                (emit_effect
                  port: (identifier))))))))))

==================
Atomic: typed ports and semicolon-separated effects
==================

model Cell {
  atomic Core {
    state phase: int = 0
    time_advance = constant(1.0)
    in job_in: Signal
    out done: Signal
    on_input job_in { phase = 1 }
    on_timeout { phase = 0; emit done }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (variable_declaration
            name: (identifier)
            type: (type_name
              (identifier))
            value: (value
              (value_literal
                (integer))))
          (field
            name: (identifier)
            value: (value
              (call
                name: (identifier)
                args: (argument_list
                  (value
                    (value_literal
                      (float)))))))
          (port_declaration
            name: (identifier)
            type: (type_name
              (identifier)))
          (port_declaration
            name: (identifier)
            type: (type_name
              (identifier)))
          (behavior
            trigger: (trigger)
            port: (identifier)
            effects: (effect_list
              (effect
                (assignment_effect
                  name: (identifier)
                  value: (value
                    (value_literal
                      (integer)))))))
          (behavior
            trigger: (trigger)
            effects: (effect_list
              (effect
                (assignment_effect
                  name: (identifier)
                  value: (value
                    (value_literal
                      (integer)))))
              (effect
                (emit_effect
                  port: (identifier))))))))))
