dsl/tree-sitter-logicpilot/test/corpus/boundary.txt
==================
Empty blocks at every nesting level
==================

model Empty {
  resource R {}
  process P {
    source S {}
    queue Q {}
    service V {}
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body)))))))

==================
Multiple resources then multiple processes
==================

model Shop {
  resource Drill { capacity = 2 }
  resource Lathe { capacity = 4 failure_rate = 0.05 }
  resource Crane { capacity = 1 }
  process A {
    source In { arrival = poisson(3) }
    service Drill { time = normal(8, 1) }
  }
  process B {
    source In { arrival = poisson(1) }
    queue Hold { capacity = 5 }
    service Crane { time = constant(10) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))
          (field
            name: (identifier)
            value: (value
              (value_literal
                (float))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))
                      (value
                        (value_literal
                          (integer)))))))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer))))))))))))))

==================
Comments interleaved everywhere
==================

/* header block comment */
model Commented { // model line comment
  /* before resource */
  resource R {
    capacity = 2 // inline
    /* between fields */
    failure_rate = 0.5
  }
  // before process
  process P {
    source S { arrival = poisson(1) /* arrivals */ }
    /* before queue */
    queue Q { capacity = 3 }
    service R { time = exponential(2) } // tail
  }
}
/* footer block comment */
---

(source_file
  (comment)
  (model_declaration
    name: (identifier)
    body: (model_body
      (comment)
      (comment)
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))
          (comment)
          (comment)
          (field
            name: (identifier)
            value: (value
              (value_literal
                (float))))))
      (comment)
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))))))
              (comment)))
          (comment)
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))))))))
          (comment)))))
  (comment))
