dsl/tree-sitter-logicpilot/test/corpus/continuous.txt
==================
Continuous blocks: state, param, equation
==================

model Decay {
  continuous Dynamics {
    state y = 1.0
    param k = 0.5
    d y/dt = -k*y
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (variable_declaration
            name: (identifier)
            value: (value
              (value_literal
                (float))))
          (variable_declaration
            name: (identifier)
            value: (value
              (value_literal
                (float))))
          (equation
            name: (identifier)
            rhs: (rhs_text)))))))

==================
Continuous with typed state and param
==================

model SIR {
  continuous Dynamics {
    state S: float = 0.99
    param beta: float = 0.5
    d S/dt = -beta*S*I
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (variable_declaration
            name: (identifier)
            type: (type_name
              (identifier))
            value: (value
              (value_literal
                (float))))
          (variable_declaration
            name: (identifier)
            type: (type_name
              (identifier))
            value: (value
              (value_literal
                (float))))
          (equation
            name: (identifier)
            rhs: (rhs_text)))))))
