dsl/tree-sitter-logicpilot/test/corpus/end_to_end.txt
==================
End-to-end Factory model from dsl-spec
==================

// Factory example - v0 DSL
model Factory {
  resource Machine {
    capacity = 3
    failure_rate = 0.01
  }

  process Production {
    source Order {
      arrival = poisson(5)
    }
    queue Buffer {
      capacity = 50
    }
    service Machine {
      time = normal(10, 2)
    }
  }
}
---

(source_file
  (comment)
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))
          (field
            name: (identifier)
            value: (value
              (value_literal
                (float))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))
                      (value
                        (value_literal
                          (integer))))))))))))))

==================
End-to-end M/M/1 queue model
==================

// M/M/1: single server, Poisson arrivals, exponential service
model MM1 {
  resource Server {
    capacity = 1
    failure_rate = 0.0
  }
  source Jobs {
    arrival = poisson(1)
  }
  queue WaitingLine {
    capacity = 100
  }
  service Server {
    time = exponential(2)
  }
  couple Jobs.out -> WaitingLine.in
  couple WaitingLine.out -> Server.in
}
---

(source_file
  (comment)
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))
          (field
            name: (identifier)
            value: (value
              (value_literal
                (float))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (call
                name: (identifier)
                args: (argument_list
                  (value
                    (value_literal
                      (integer)))))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (call
                name: (identifier)
                args: (argument_list
                  (value
                    (value_literal
                      (integer)))))))))
      (couple_declaration
        from_model: (identifier)
        from_port: (identifier)
        to_model: (identifier)
        to_port: (identifier))
      (couple_declaration
        from_model: (identifier)
        from_port: (identifier)
        to_model: (identifier)
        to_port: (identifier)))))

==================
End-to-end QueueDemo with exponential service
==================

model QueueDemo {
  resource Server { capacity = 1 }
  process Arrivals {
    source Clients { arrival = poisson(2) }
    queue WaitLine { capacity = 0 }
    service Server { time = exponential(3) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer)))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer))))))))))))))
