dsl/tree-sitter-logicpilot/test/corpus/expressions.txt
==================
Binary arithmetic with precedence
==================

model M {
  process P {
    source A { arrival = rate(2 * 0.4) }
    queue Q { capacity = 100 + 1 }
    service R { time = normal(10 - 1, 2) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (binary_expression
                          left: (value
                            (value_literal
                              (integer)))
                          op: (binary_op)
                          right: (value
                            (value_literal
                              (float)))))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (binary_expression
                    left: (value
                      (value_literal
                        (integer)))
                    op: (binary_op)
                    right: (value
                      (value_literal
                        (integer))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (binary_expression
                          left: (value
                            (value_literal
                              (integer)))
                          op: (binary_op)
                          right: (value
                            (value_literal
                              (integer)))))
                      (value
                        (value_literal
                          (integer))))))))))))))

==================
Unary negation and parentheses
==================

model M {
  process P {
    queue Q { capacity = (10 + 2) * 3 }
    service R { time = constant(1 * -2) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (binary_expression
                    left: (value
                      (parenthesized_expression
                        value: (value
                          (binary_expression
                            left: (value
                              (value_literal
                                (integer)))
                            op: (binary_op)
                            right: (value
                              (value_literal
                                (integer)))))))
                    op: (binary_op)
                    right: (value
                      (value_literal
                        (integer))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (binary_expression
                          left: (value
                            (value_literal
                              (integer)))
                          op: (binary_op)
                          right: (value
                            (unary_expression
                              op: (unary_op)
                              operand: (value
                                (value_literal
                                  (integer))))))))))))))))))

==================
Parameter references in expressions
==================

model M {
  param arrival_rate: float = 0.8
  process P {
    source A { arrival = rate(arrival_rate * 2) }
    queue Q { capacity = 100 }
    service R { time = exponential(1) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (variable_declaration
        name: (identifier)
        type: (type_name
          (identifier))
        value: (value
          (value_literal
            (float))))
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (binary_expression
                          left: (value
                            (identifier))
                          op: (binary_op)
                          right: (value
                            (value_literal
                              (integer)))))))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (value
                        (value_literal
                          (integer))))))))))))))


==================
Comparison operators in conditions
==================

model M {
  selectOutput R {
    condition = t < 100
  }
}

---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (binary_expression
                left: (value
                  (identifier))
                op: (binary_op)
                right: (value
                  (value_literal
                    (integer)))))))))))

====================
Field access in a match condition
====================

model M {
  match Sync {
    matchCondition = agent1.kind == agent2.kind
  }
}

---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (binary_expression
                left: (value
                  (field_access
                    base: (identifier)
                    field: (identifier)))
                op: (binary_op)
                right: (value
                  (field_access
                    base: (identifier)
                    field: (identifier)))))))))))

====================
Equality comparison in a condition
====================

model M {
  selectOutput R {
    condition = priority == 5
  }
}

---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (binary_expression
                left: (value
                  (identifier))
                op: (binary_op)
                right: (value
                  (value_literal
                    (integer)))))))))))
